# GildedRose-Refactoring-Kata

./: pyproject.toml
python/: gilded_rose.py  test_gilded_rose.py
