[project]
name = "gildedrose-refactoring-kata"
version = "0.1.0"
description = ""
authors = [
    {name = "l2late",email = "lucadelaat@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pytest (>=8.3.5,<9.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
